# learning-python

./: .gitignore  hello.py  kraggle.py  pyproject.toml  streamlit_app.py
.claude/skills/drawio-diagram/: SKILL.md
.claude/skills/drawio-diagram/references/: templates.md
.claude/skills/python-grumpy-reviewer/: SKILL.md
.copilot/skills/python-grumpy-reviewer/references/: checklist.md
.copilot/skills/python-programmer/: SKILL.md
.streamlit/: config.toml
copilot/skills/drawio-diagram/: SKILL.md
copilot/skills/drawio-diagram/references/: templates.md
copilot/skills/python-grumpy-reviewer/: SKILL.md
copilot/skills/python-grumpy-reviewer/references/: checklist.md
copilot/skills/python-programmer/: SKILL.md
data_models/: ai_job_basic.py  ai_jobs_schema.yaml
terraform/: README.md  main.tf  outputs.tf  variables.tf
tests/: test_calculator.py  test_kraggle.py  test_math_utils.py  test_validation.py
