[project]
name = "ai-impact-analysis"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ron J", email = "ron_example@gmail.com"},
]
dependencies = ["kagglehub>=1.0.0", "pydantic>=2.12.5"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
