[project]
name = "ai-impact-analysis"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ron J", email = "ron_example@gmail.com"},
]
dependencies = ["kagglehub>=1.0.0", "pydantic>=2.12.5", "duckdb>=1.0.0", "pyarrow>=12.0.0"]
requires-python = "==3.13.*"
readme = "README.md"

[tool.pdm]
distribution = false
